--- a/UserApp/UserApp/UserApp.csproj
+++ b/UserApp/UserApp/UserApp.csproj
@@ -72,6 +72,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Fit_Parameter">
+      <HintPath>bin\lib\Fit_Parameter.dll</HintPath>
+    </Reference>
     <Reference Include="MWArray, Version=2.14.0.0, Culture=neutral, PublicKeyToken=e1d84a0da19db86f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\lib\MWArray.dll</HintPath>
