--- a/UserApp/UserApp/UserApp.csproj
+++ b/UserApp/UserApp/UserApp.csproj
@@ -110,6 +110,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Analyse.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Analyse.Designer.cs">
+      <DependentUpon>Analyse.cs</DependentUpon>
+    </Compile>
     <Compile Include="Calibration.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -142,6 +148,9 @@
     <Compile Include="ZeroPosition.Designer.cs">
       <DependentUpon>ZeroPosition.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Analyse.resx">
+      <DependentUpon>Analyse.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Calibration.resx">
       <DependentUpon>Calibration.cs</DependentUpon>
     </EmbeddedResource>
